gig updates and formatting

--- a/_data/concerts.yml
+++ b/_data/concerts.yml
@@ -42,7 +42,7 @@
 - concert: 21.11 | TBA
   year: 2014
 
-- concert: 22.11 | Antikomunist_fest 11, Lestkov, CZ
+- concert: 22.11 | Lestkov, Antikomunist_fest 11 - CZ
   year: 2014
 
 - concert: 03.04 | Friedland, Endstation - DE
@@ -73,31 +73,37 @@
 - concert: 16.04 | Prague, Cross Club - CZ
   year: 2015
 
-- concert: 31.03 | Fehmarn - tba - DE
+- concert: 31.03 | Wulfen auf Fehmarn, Camping Wulfener Hals - DE
   year: 2015
 
-- concert: 01.04 | Sellin - Böhmisches Gasthaus - DE
+- concert: 01.04 | Sellin auf Rügen, Böhmisches Gasthaus - DE
   year: 2015
 
-- concert: 02.04 | Harsefeld - tba - DE
+- concert: 02.04 | Friedland, Endstation - DE
   year: 2015
 
-- concert: 03.04 | Friedland - Endstation - DE
+- concert: 04.04 | Berlin, Tommy Weisbecker Haus - DE
   year: 2015
 
-- concert: 04.04 | Berlin - Tommy Weisbecker Haus - DE
+- concert: 05.04 |  Prague, Parukářka - CZ
+  meta: Eddy Allen Trio
   year: 2015
 
-- concert: 17.04 | Grebin - Die Hofkneipe - DE
+- concert: 07.04 | Prague, Chapeau Rouge - CZ
   year: 2015
 
-- concert: 18.04 | Flensburg - Tableau Kulturcafé - DE
+- concert: 25.04 | Potsdam, Restaurant Hiemke - DE
   year: 2015
 
-- concert: 25.04 | Potsdam - Restaurant Hiemke - DE
-  year: 2015
-
-- concert: 26.04 | Dresden - Wyndham Garden - DE
+- concert: 26.04 | Dresden, Wyndham Garden - DE
   meta: Closed event
   year: 2015
 
+- concert: 02.05 | Ummanz auf Rügen, Surfhostel - DE
+  year: 2015
+
+- concert: 30.05 | Brno, Mersey Club - CZ
+  year: 2015
+
+- concert: 28-29.08 | Potsdam, Ohne Sorgen Festival - DE 
+  year: 2015
