ignoring _site files

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ _site/
 info.md
 cctv_info.md
 feed.xml
+_site/collective.html
+_site/collective.html
+_site/collective.html
+_site/media.html
+_site/video.html
