concert.meta & concert.status formatting and logic

--- a/_data/concerts.yml
+++ b/_data/concerts.yml
@@ -71,7 +71,7 @@
 
 - concert: 16.04 | Prague, La Loca - CZ
   year: 2015
-  cancelled: true
+  status: Cancelled
 
 - concert: 17.04 | Grebin, Die Hofkneipe - DE
   year: 2015
