--- a/_data/concerts.yml
+++ b/_data/concerts.yml
@@ -123,6 +123,12 @@
 - concert: 03.07 - 04.07 | Mighty Sounds Festival, Tabor, CZ
   year: 2015
 
+- concert: 22.8.2015 | Charitativní-Multižánrový Festival, Pisek, CZ
+  year: 2015
+
+- concert: 23.8.2015 | Čajomír Festival - Prague, CZ
+  year: 2015
+
 - concert: 27.08 | Schokoladen, Berlin, DE
   year: 2015
 
@@ -130,4 +136,7 @@
   year: 2015
 
 - concert: 29.08 | Rock im Park, Leuben-Schlenitz, DE
+  year: 2015
+
+- concert: 01.09 | Chapeau Rouge, Prague, CZ
   year: 2015
