--- a/_data/concerts.yml
+++ b/_data/concerts.yml
@@ -126,7 +126,7 @@
 - concert: 22.8.2015 | Charitativní-Multižánrový Festival, Pisek, CZ
   year: 2015
 
-- concert: 23.8.2015 | Čajomír Festival - Prague, CZ
+- concert: 23.8.2015 | Čajomír Festival, Prague, CZ
   year: 2015
 
 - concert: 27.08 | Schokoladen, Berlin, DE
