--- a/_data/concerts.yml
+++ b/_data/concerts.yml
@@ -123,7 +123,11 @@
 - concert: 03.07 - 04.07 | Mighty Sounds Festival, Tabor, CZ
   year: 2015
 
-- concert: 22.8.2015 | Charitativní-Multižánrový Festival, Pisek, CZ
+- concert: 19.08 | Cross Club Garden, Prague, CZ
+  meta: 19:00 - 21:00
+  year: 2015
+
+- concert: 22.8.2015 | Houpačka, Velešín, CZ
   year: 2015
 
 - concert: 23.8.2015 | Čajomír Festival, Prague, CZ
