concerts update april 2016

--- a/_data/concerts.yml
+++ b/_data/concerts.yml
@@ -144,3 +144,18 @@
 
 - concert: 01.09 | Chapeau Rouge, Prague, CZ
   year: 2015
+
+- concert: 19.04 | Chapeaurouge (CZ)
+  year: 2016
+
+- concert: 21.04 | Dresden TBA (DE)
+  year: 2016
+
+- concert: 22.04 | Berlin TBA (DE)
+  year: 2016
+
+- concert: 23.04 | Berlin TBA (DE)
+  year: 2016
+
+- concert: 29.04 | The Golden Lion - Fishponds - Bristol (UK)
+  year: 2016
